--- a/platforms/android/assets/www/photoUpload.html
+++ b/platforms/android/assets/www/photoUpload.html
@@ -20,7 +20,7 @@
 		<p><input
 		type='text', name='photo[name]', placeholder='Name'/>
 		</p>
-		<p><input type='file', name='photo[image]'/></p>
+		<p><input type='file', name='photo[image]' accept="image/*" /></p>
 		<p><input type='submit', value='Upload'/></p>
 		</form>	
   
